--- a/index.html
+++ b/index.html
@@ -118,7 +118,50 @@
 
          <!--==================== ABOUT ====================-->
          <section class="about section" id="about">
-            
+            <div class="about__container container grid">
+               <h2 class="section__title-1">
+                  About Me.   
+               </h2>
+
+               <div class="about__perfil">
+                  <div class="about__image">
+                     <img src="assets/img/about-perfil.png" alt="image" class="about__img">
+
+                     <div class="about__shadow"></div>
+
+                     <div class="geometric-box"></div>
+                     <img src="assets/img/random-lines.svg" alt="" class="about__line">
+                     <div class="about__box"></div>
+                  </div>
+               </div>
+
+               <div class="about__info">
+                  <p class="about__description">
+                     Passionate about creating <b>Web Page</b> with
+                     <b>UI/UX User Interface</b>, I have years of
+                     experience and many clients are happy with
+                     the projects carried out.
+                  </p>
+
+                  <ul class="about__list">
+                     <li class="about__item">
+                        <b>My Skills are:</b> HTML, CSS, JavaScript,
+                        TailwindCSS, Git & Github, Bootstrap & Figma.
+                     </li>
+                  </ul>
+
+                  <div class="about__buttons">
+                     <a href="#contact" class="button">
+                     <i class="ri-send-plane-line"></i>
+                     Contact Me
+                     </a>
+
+                     <a href="https://www.linkedin.com/in/mochammad-indra-maulidana-a7b704276?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" class="button__ghost">
+                        <i class="ri-linkedin-box-line"></i>
+                     </a>
+                  </div>
+               </div>
+            </div>
          </section>
 
          <!--==================== SERVICES ====================-->
