--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
                      </p>
                   </div>
                </article>
+
                <article class="services__card">
                   <div class="services__border"></div>
 
@@ -207,6 +208,7 @@
                      </p>
                   </div>
                </article>
+
                <article class="services__card">
                   <div class="services__border"></div>
 
@@ -230,7 +232,95 @@
 
          <!--==================== PROJECTS ====================-->
          <section class="projects section" id="projects">
-            
+            <h2 class="section__title-1">
+               <span>Projects</span>
+            </h2>
+
+            <div class="projects__container container grid">
+               <article class="projects__card">
+                  <div class="projects__image">
+                     <img src="assets/img/project-1.jpg" alt="image" class="projects__img">
+
+                     <a href="#" class="projects__button button">
+                        <i class="ri-arrow-right-up-line"></i>
+                     </a>
+                  </div>
+
+                  <div class="projects__content">
+                     <h3 class="project__subtitle">Website</h3>
+                     <h2 class="projects__title">Restaurant Website</h2>
+
+                     <p class="projects__description">
+                        Project that you carry out in the design
+                        and structure of the layout, showing the
+                        design at the layout, showing the
+                        design at the client's request.
+                     </p>
+                  </div>
+
+                  <div class="projects__buttons">
+                     <a href="#" target="_blank" class="projects__link">
+                        <i class="ri-github-line"></i> View
+                     </a>
+                  </div>
+               </article>
+
+               <article class="projects__card">
+                  <div class="projects__image">
+                     <img src="assets/img/project-2.jpg" alt="image" class="projects__img">
+
+                     <a href="#" class="projects__button button">
+                        <i class="ri-arrow-right-up-line"></i>
+                     </a>
+                  </div>
+
+                  <div class="projects__content">
+                     <h3 class="project__subtitle">Desktop</h3>
+                     <h2 class="projects__title">Stationary Store</h2>
+
+                     <p class="projects__description">
+                        Project that you carry out in the design
+                        and structure of the layout, showing the
+                        design at the layout, showing the
+                        design at the client's request.
+                     </p>
+                  </div>
+
+                  <div class="projects__buttons">
+                     <a href="" target="_blank" class="projects__link">
+                        <i class="ri-github-line"></i> View
+                     </a>
+                  </div>
+               </article>
+
+               <article class="projects__card">
+                  <div class="projects__image">
+                     <img src="assets/img/project-3.jpg" alt="image" class="projects__img">
+
+                     <a href="#" class="projects__button button">
+                        <i class="ri-arrow-right-up-line"></i>
+                     </a>
+                  </div>
+
+                  <div class="projects__content">
+                     <h3 class="project__subtitle">Printing Online</h3>
+                     <h2 class="projects__title">Website & Mobile</h2>
+
+                     <p class="projects__description">
+                        Project that you carry out in the design
+                        and structure of the layout, showing the
+                        design at the layout, showing the
+                        design at the client's request.
+                     </p>
+                  </div>
+
+                  <div class="projects__buttons">
+                     <a href="" target="_blank" class="projects__link">
+                        <i class="ri-github-line"></i> View
+                     </a>
+                  </div>
+               </article>
+            </div>
          </section>
 
          <!--==================== CONTACT ====================-->
