--- a/index.html
+++ b/index.html
@@ -325,7 +325,89 @@
 
          <!--==================== CONTACT ====================-->
          <section class="contact section" id="contact">
-            
+            <div class="contact__container grid">
+               <div class="contact__data">
+                  <h2 class="section__title-2">
+                     <span>Contact Me.</span>
+                  </h2>
+
+                  <p class="contact__description-1">
+                     I will read all emails. Send me any
+                     message you want and I'll get back to you.
+                  </p>
+
+                  <p class="contact__description-2">
+                     I need your <b>Name</b> and <b>Email Address</b>, but
+                     you won't receive anything other than your reply.
+                  </p>
+
+                  <div class="geometrix-box"></div>
+               </div>
+            </div>
+
+            <div class="contact__mail">
+               <h2 class="contact__title">
+                  Send Me a Message
+               </h2>
+
+               <form action="" class="contact__form" id="contact-form">
+                  <div class="contact__group">
+                     <div class="contact__box">
+                        <input type="text" name="user_name" class="contact__input" id="name" required placeholder="First Name">
+                        <label for="name" class="contact__label">First Name</label>
+                     </div>
+
+                     <div class="contact__box">
+                        <input type="email" name="user_email" class="contact__input" id="email" required placeholder="Email Address">
+                        <label for="email" class="contact__label">Email Address</label>
+                     </div>
+                  </div>
+                  
+                  <div class="contact__box">
+                     <input type="subject" name="user_subject" class="contact__input" id="subject" required placeholder="Subject">
+                     <label for="subject" class="contact__label">Subject</label>
+                  </div>
+
+                  <div class="contact__box contact__area">
+                     <textarea name="user_message" id="message" class="contact__input" required placeholder="Message"></textarea>
+                     <label for="name" class="contact__label">Message</label>
+                  </div>
+
+                  <button class="contact__button button">
+                     <i class="ri-send-plane-line"></i> Send Message
+                  </button>
+               </form>
+            </div>
+
+            <div class="contact__social">
+               <img src="assets/img/curved-arrow.svg" alt="" class="contact__social-arrow">
+
+               <div class="contact__social-data">
+                  <div>
+                     <p class="contact__social-description-1">
+                        Does not send emails
+                     </p>
+
+                     <p class="contact__social-description-2">
+                        Write me on my social networks
+                     </p>
+                  </div>
+
+                  <div class="contact__social-links">
+                     <a href="https://www.facebook.com/Mochammad.IndraM" target="_blank" class="contact__social-link">
+                        <i class="ri-facebook-circle-line"></i>
+                     </a>
+
+                     <a href="https://www.instagram.com/zamm346/" target="_blank" class="contact__social-link">
+                        <i class="ri-instagram-line"></i>
+                     </a>
+
+                     <a href="https://www.linkedin.com/in/mochammad-indra-maulidana-a7b704276?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app " target="_blank" class="contact__social-link">
+                        <i class="ri-linkedin-box-line"></i>
+                     </a>
+                  </div>
+               </div>
+            </div>
          </section>
       </main>
 
