--- a/index.html
+++ b/index.html
@@ -424,7 +424,26 @@
 
    <!--==================== FOOTER ====================-->
    <footer class="footer">
+      <div class="footer__container container grid">
+         <ul class="footer__links">
+            <li>
+               <a href="#about" class="footer__link">About</a>
+            </li>
 
+            <li>
+               <a href="#services" class="footer__link">Services</a>
+            </li>
+
+            <li>
+               <a href="#projects" class="footer__link">Projects</a>
+            </li>
+         </ul>
+
+         <span class="footer__copy">
+            &#169; All Right Reserved By
+            <a href="">Mochammad Indra M.</a>
+         </span>
+      </div>
    </footer>
 
    <!--========== SCROLL UP ==========-->
