--- a/index.html
+++ b/index.html
@@ -447,7 +447,9 @@
    </footer>
 
    <!--========== SCROLL UP ==========-->
-
+   <a href="" class="scrollup" id="scroll-up">
+      <i class="ri-arrow-up-s-line"></i>
+   </a>
 
    <!--=============== SCROLLREVEAL ===============-->
    <script src=""></script>
