Adding Dark Theme

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
             <ul class="nav__list">
                <li class="nav__item">
-                  <a href="#home" class="nav__link">Home</a>
+                  <a href="#home" class="nav__link active-link">Home</a>
                </li>
 
                <li class="nav__item">
@@ -56,6 +56,9 @@
          </div>
 
          <div class="nav__buttons">
+            <!-- Theme button -->
+            <i class="ri-moon-line change-theme" id="theme-button"></i>
+
             <!-- Toogle Button -->
             <div class="nav__toggle" id="nav-toggle">
                <i class="ri-menu-4-line"></i>
@@ -70,7 +73,7 @@
       <section class="home section" id="home">
          <div class="home__container container grid">
             <h1 class="home__name">
-               Mochammad Indra M
+               Mochammad Indra M.
             </h1>
 
             <div class="home__perfil">
@@ -447,7 +450,7 @@
    </footer>
 
    <!--========== SCROLL UP ==========-->
-   <a href="" class="scrollup" id="scroll-up">
+   <a href="#" class="scrollup" id="scroll-up">
       <i class="ri-arrow-up-s-line"></i>
    </a>
 
