--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                </li>
 
                <li class="nav__item">
-                  <a href="#contact" class="nav__link">Contact</a>
+                  <a href="#contact" class="nav__link nav__link-button">Contact</a>
                </li>
             </ul>
 
@@ -350,47 +350,47 @@
 
                <div class="geometrix-box"></div>
             </div>
-         </div>
-
-         <div class="contact__mail">
-            <h2 class="contact__title">
-               Send Me a Message
-            </h2>
-
-            <form action="" class="contact__form" id="contact-form">
-               <div class="contact__group">
-                  <div class="contact__box">
-                     <input type="text" name="user_name" class="contact__input" id="name" required
-                        placeholder="First Name">
-                     <label for="name" class="contact__label">First Name</label>
+            <div class="contact__mail">
+               <h2 class="contact__title">
+                  Send Me a Message
+               </h2>
+   
+               <form action="" class="contact__form" id="contact-form">
+                  <div class="contact__group">
+                     <div class="contact__box">
+                        <input type="text" name="user_name" class="contact__input" id="name" required
+                           placeholder="First Name">
+                        <label for="name" class="contact__label">First Name</label>
+                     </div>
+   
+                     <div class="contact__box">
+                        <input type="email" name="user_email" class="contact__input" id="email" required
+                           placeholder="Email Address">
+                        <label for="email" class="contact__label">Email Address</label>
+                     </div>
                   </div>
-
+   
                   <div class="contact__box">
-                     <input type="email" name="user_email" class="contact__input" id="email" required
-                        placeholder="Email Address">
-                     <label for="email" class="contact__label">Email Address</label>
+                     <input type="subject" name="user_subject" class="contact__input" id="subject" required
+                        placeholder="Subject">
+                     <label for="subject" class="contact__label">Subject</label>
                   </div>
-               </div>
-
-               <div class="contact__box">
-                  <input type="subject" name="user_subject" class="contact__input" id="subject" required
-                     placeholder="Subject">
-                  <label for="subject" class="contact__label">Subject</label>
-               </div>
-
-               <div class="contact__box contact__area">
-                  <textarea name="user_message" id="message" class="contact__input" required
-                     placeholder="Message"></textarea>
-                  <label for="message" class="contact__label">Message</label>
-               </div>
-
-               <p class="contact__message" id="contact-message"></p>
-
-               <button class="contact__button button">
-                  <i class="ri-send-plane-line"></i> Send Message
-               </button>
-            </form>
-         </div>
+   
+                  <div class="contact__box contact__area">
+                     <textarea name="user_message" id="message" class="contact__input" required
+                        placeholder="Message"></textarea>
+                     <label for="message" class="contact__label">Message</label>
+                  </div>
+   
+                  <p class="contact__message" id="contact-message"></p>
+   
+                  <button class="contact__button button">
+                     <i class="ri-send-plane-line"></i> Send Message
+                  </button>
+               </form>
+            </div>
+            
+         
 
          <div class="contact__social">
             <img src="assets/img/curved-arrow.svg" alt="" class="contact__social-arrow">
@@ -421,6 +421,7 @@
                   </a>
                </div>
             </div>
+         </div>
          </div>
       </section>
    </main>
