--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                </div>
 
                <div class="home__social">
-                  <a href="https://www.instagram.com/zamm346/" target="_blank" class="home__social-link">
+                  <a href="https://www.instagram.com/intheraaa_/" target="_blank" class="home__social-link">
                      <i class="ri-instagram-line"></i>
                   </a>
 
